# google-access

./: .gitattributes  .gitignore  CHANGELOG.md  CODEMAP.md  README.md  pyproject.toml  requirements.txt
notebooks/: folders.ipynb
projects/cacciamani-request/notebooks/: experiment.ipynb  folders.ipynb
projects/cacciamani-request/src/transform/: file_transforms.py
src/google_access/: __init__.py  constants.py
src/google_access/ingest/: sheets.py
src/google_access/io/: __init__.py  auth.py  drive.py  google_api.py
src/google_access/tools/: healthcheck.py
src/google_access/transform/: __init__.py  file_transforms.py
src/google_access/utils/: __init__.py  constants.py  log_utils.py  text_utils.py
